# local-youtube-summarizer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.bat  setup.sh
src/summarizer/: __init__.py  _transcribe_cli.py  cli.py  config.py  downloader.py  streamlit_app.py  summarizer.py  transcriber.py
